--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/node": "~12.12.67",
     "@types/react": "~16.9.51",
     "@types/react-dom": "~16.9.8",
+    "@types/uniqid": "~5.2.0",
     "array-move": "~3.0.1",
     "framer-motion": "~2.8.0",
+    "node-sass": "~4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-id-generator": "~3.0.1",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.5"
   },
