--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/core": "~0.8.0",
+    "@emotion/core": "~10.0.35",
+    "@emotion/styled": "~10.0.27",
     "@popmotion/popcorn": "~0.4.4",
     "@testing-library/jest-dom": "~4.2.4",
     "@testing-library/react": "~9.5.0",
@@ -13,10 +16,12 @@
     "@types/react-dom": "~16.9.8",
     "@types/uniqid": "~5.2.0",
     "array-move": "~3.0.1",
+    "emotion-theming": "~10.0.27",
     "framer-motion": "~2.8.0",
     "node-sass": "~4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "~3.11.0",
     "react-id-generator": "~3.0.1",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.5"
@@ -46,8 +51,8 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.4.0",
-    "@typescript-eslint/parser": "4.4.0",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "babel-eslint": "10.1.0",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-airbnb-typescript": "11.0.0",
